Closed Bug 502730 Opened 16 years ago Closed 16 years ago

ASSERTION: Wrong scope, this is really bad!: 'JS_GetGlobalForObject(cx, obj) == newScope'

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla1.9.2a1
Tracking Status
status1.9.2 --- beta1-fixed
status1.9.1 --- wontfix

People

(Reporter: aakashd, Assigned: peterv)

References

Details

Attachments

(3 files)

build id: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre) Gecko/20090706 Minefield/3.6a1pre ID:20090706143743 Use the following in-line JS into the location bar on a debug build of trunk document.write("<head></head><body></body>"); This is referenced off of bug 465752 and the JS listed there by bz
I can reproduce. ###!!! ASSERTION: Wrong scope, this is really bad!: 'JS_GetGlobalForObject(cx, obj) == newScope', file /Users/jruderman/central/content/base/src/nsDocument.cpp, line 3566
Peter, Blake, this looks related to stuff you've looked into recently... and which might want on branches. It would be really nice to have a regression range here to make sure we _don't_ land this on branch all-unknowing.
Flags: blocking1.9.2?
Peter, could you have a look at this one? I think it'd be good to at least understand more about this for 1.9.2...
Assignee: nobody → peterv
Flags: blocking1.9.2? → blocking1.9.2+
Priority: -- → P2
Hmm, we check the scope before OpenCommon reparents the wrapper. We somehow need to relax this assertion in that case.
The assertion was added in bug 499910, so pretty sure that's where the regression comes from.
Blocks: 499910
Status: NEW → ASSIGNED
Attached patch v1Splinter Review
Attached patch v1 (diff -w)Splinter Review
Attachment #393817 - Flags: superreview?(jst)
Attachment #393817 - Flags: review?(jst)
Attachment #393817 - Flags: superreview?(jst)
Attachment #393817 - Flags: superreview+
Attachment #393817 - Flags: review?(jst)
Attachment #393817 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
OS: Mac OS X → All
Hardware: x86 → All
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.2a1
This is a debug only patch, removing a false-positive occurrence of an assertion. The assertion is pretty important, so I think it'd be good to resolve this on the branch too so we avoid confusion (see bug 517711).
Attachment #422532 - Flags: approval1.9.1.8?
Comment on attachment 422532 [details] [diff] [review] v1 (1.9.1 branch version) Approved for 1.9.1.8, a=dveditz for release-drivers
Attachment #422532 - Flags: approval1.9.1.8? → approval1.9.1.8+
peterv: please land this today if it's going to make 1.9.1.8, otherwise it'll have to go into a future release.
Attachment #422532 - Flags: approval1.9.1.8+ → approval1.9.1.9?
Comment on attachment 422532 [details] [diff] [review] v1 (1.9.1 branch version) next release it is: approval1.9.1.8 removed.
Attachment #422532 - Flags: approval1.9.1.9?
Comment on attachment 422532 [details] [diff] [review] v1 (1.9.1 branch version) I shouldn't have moved the request from 1.9.1.8 to 1.9.1.9 -- it's possible it missed 1.9.1.8 because you don't really want it anymore. Please re-request approval if you do still want this on the 1.9.1 branch
blocking1.9.1: --- → ?
blocking1.9.1: ? → needed
Guess we're wontfixing this for the 1.9.1 branch
blocking1.9.1: needed → ---
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: